<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bb"
    >


    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="96dp"
        android:layout_height="147dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="314dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/txtbox_bg"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="left"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/loginLbl"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/loginLbl"
        app:layout_constraintTop_toBottomOf="@+id/loginLbl" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txtbox_bg"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_vertical"
        android:hint="*************"
        android:inputType="textPassword"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/Username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/loginLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/login_activity_loginlbl_Text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/loginLogo"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/loginLogo"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:id="@+id/createAcc_lbl"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:text="@string/login_activity_create_account_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"

            />

        <TextView
            android:id="@+id/createAcc_Link"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:text="@string/login_activity_create_account_textlink"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>